--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       padding-top: 150px;
       background-color: black;
       color: white;
-      background-image: url("img/fundo.png");
+      background-image: url("fundo.png");
       font-family: 'Great Vibes', cursive;
       overflow-x: hidden;
     }
@@ -101,8 +101,8 @@
 <body>
   <main>
     <section class="visual">
-      <img src="img/texto.png" alt="Texto girando" class="girando" />
-      <img src="img/corpo.png" alt="Corpo estático" class="corpo" />
+      <img src="texto.png" alt="Texto girando" class="girando" />
+      <img src="corpo.png" alt="Corpo estático" class="corpo" />
     </section>
 
     <div class="mensagem">Hoje é seu dia, e meu coração só consegue agradecer por você existir.</div>
