--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   <!-- Música de fundo -->
   <audio autoplay loop>
-    <source src="musica/parabens.mp3" type="audio/mpeg" />
+    <source src="parabens.mpeg" type="audio/mpeg" />
     Seu navegador não suporta áudio.
   </audio>
 </body>
